This file lists all the major user-visible changes to nullmailer.
-------------------------------------------------------------------------------
Changes in version 1.03

- Fixed the SMTP protocol module to send QUIT on protocol failures.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.02

- Fixed bug in SMTP AUTH that would cause SMTP sending to crash with a
  segfault when it was used.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.01

- Added support for SMTP AUTH PLAIN.
  Thanks to Ace Jones for the initial implementation.

- Fixed compile error in lib/list.h

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.00

- Fixed problem with multiple arguments to protocol modules.
  Thanks Sascha Silbe.

- Fixed extraneous spaces in SMTP sender.

- Made permissions on queued files more strict.

- Handle the "-bs" flag in the sendmail wrapper by dieing when we see it.

- Fixed the address parser handling domain names with trailing periods.

- Fixed bug in header parsing that would cause the last header line to
  be repeated if there was no body.

- Fixed bug in handling headers containing CR+LF line endings.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.00RC7

- Fixed typo in smtp protocol module that caused HELO to be sent without
  a hostname.
